--- a/index.html
+++ b/index.html
@@ -53,6 +53,8 @@
       </div>
     </main>
 
+    <footer id="main-footer">Copyright &copy; 2018</footer>
+
     <script src="js/main.js"></script>
   </body>
 </html>
